api-gateway - spring-boot-docker-compose dependency is added v2

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -44,6 +44,10 @@ spring:
   main:
     web-application-type: reactive
 
+  docker:
+    compose:
+      enabled: false
+
 google:
   recaptcha:
     url: https://www.google.com/recaptcha/api/siteverify
