--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+GATEWAY_BASE_URL: ${GATEWAY_BASE_URL_ENV:http://localhost:8080}
 KEYCLOAK_BASE_URL: http://localhost:9090
 PAYMENT_SERVICE_REALM: payment-service
 
