--- a/student-service/src/main/resources/application.yml
+++ b/student-service/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-GATEWAY_BASE_URL: http://localhost:8080
+GATEWAY_BASE_URL: ${GATEWAY_BASE_URL_ENV:http://localhost:8080}
 PAYMENT_SERVICE_KEYCLOAK_BASE_URL: ${KEYCLOAK_BASE_URL:http://localhost:9090}/realms/${PAYMENT_REALM:payment-service}/protocol/openid-connect
 PAYMENT_CLIENT_ID: payment-service
 PAYMENT_CLIENT_SECRET: ${PAYMENT_CLIENT_SECRET_ENV:Sv8ZjhY4ora9zb8tSQzNm0hCwqYjHuFW}
