--- a/openai-service/src/main/resources/application.yml
+++ b/openai-service/src/main/resources/application.yml
@@ -1,8 +1,15 @@
 GATEWAY_BASE_URL: ${GATEWAY_BASE_URL_ENV:http://localhost:8080}
 
 spring:
+  application:
+    name: openai-service
+
+  config:
+    import: optional:file:.env[.properties]
+
   jpa:
     generate-ddl: true
+
   main:
     allow-bean-definition-overriding: true
 
@@ -10,7 +17,7 @@ feign:
   services:
     openai-client:
       url: https://api.openai.com/v1
-      token: YOUR_API_KEY_HERE
+      token: ${YOUR_API_KEY_HERE}
 
 springdoc:
   api-docs:
