--- a/swagger-application/src/main/resources/application.yml
+++ b/swagger-application/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 GATEWAY_BASE_URL: ${GATEWAY_BASE_URL_ENV:http://localhost:8080}
 
 spring:
+  application:
+    name: swagger-application
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
   jackson:
     default-property-inclusion: non_null
     serialization:
@@ -14,6 +18,7 @@ spring:
     username: sa
     password: sa
     driverClassName: org.h2.Driver
+
   h2:
     console:
       enabled: true
