--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,100 @@
 version: '3.9'
 
 services:
+  api-gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    ports:
+      - "8080:8080"  # Map host port 8080 to container port 8080
+    depends_on:
+      - student-service
+      - swagger-application
+      - payment-service
+      - openai-service
+      - service-registry
+    environment:
+      EUREKA_CLIENT_SERVICE_URL: http://service-registry:8761/eureka
+    profiles:
+      - ${SERVICE_START_PROFILE}
+
+  student-service:
+    build:
+      context: ./student-service
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    ports:
+      - "8081:8080"  # Map host port 8081 to container port 8080
+    depends_on:
+      - rabbitmq
+      - postgres
+      - keycloak
+      - service-registry
+    environment:
+      EUREKA_CLIENT_SERVICE_URL: http://service-registry:8761/eureka
+      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_PORT: 5672
+    profiles:
+      - ${SERVICE_START_PROFILE}
+
+  swagger-application:
+    build:
+      context: ./swagger-application
+      dockerfile: Dockerfile
+    ports:
+      - "8082:8080"  # Map host port 8082 to container port 8080
+    depends_on:
+      - service-registry
+    environment:
+      EUREKA_CLIENT_SERVICE_URL: http://service-registry:8761/eureka
+      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_PORT: 5672
+    profiles:
+      - ${SERVICE_START_PROFILE}
+
+  payment-service:
+    build:
+      context: ./payment-service
+      dockerfile: Dockerfile
+    ports:
+      - "8083:8080"  # Map host port 8083 to container port 8080
+    depends_on:
+      - rabbitmq
+      - postgres
+      - keycloak
+      - service-registry
+    environment:
+      EUREKA_CLIENT_SERVICE_URL: http://service-registry:8761/eureka
+      DB_HOST: postgres
+      DB_PORT: 5432
+    profiles:
+      - ${SERVICE_START_PROFILE}
+
+  openai-service:
+    build:
+      context: ./openai-service
+      dockerfile: Dockerfile
+    ports:
+      - "8084:8080"  # Map host port 8084 to container port 8080
+    depends_on:
+      - service-registry
+    environment:
+      EUREKA_CLIENT_SERVICE_URL: http://service-registry:8761/eureka
+    profiles:
+      - ${SERVICE_START_PROFILE}
+
+  service-registry:
+    build:
+      context: ./service-registry
+      dockerfile: Dockerfile
+    ports:
+      - "8761:8761"  # Map host port 8761 to container port 8761
+    profiles:
+      - ${SERVICE_START_PROFILE}
+
   rabbitmq:
     image: rabbitmq:3-management
     restart: always
