--- a/openai-service/src/main/resources/application.yml
+++ b/openai-service/src/main/resources/application.yml
@@ -28,3 +28,8 @@ springdoc:
 
 server:
   port: 8084
+
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka}
