--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5433/postgres?currentSchema=payment_schema
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/postgres?currentSchema=payment_schema
     username: postgres
     password: postgres
 
@@ -67,3 +67,8 @@ springdoc:
       auth-code-flow: false
       implicit-flow: false
       bearer: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka}
