--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -33,6 +33,29 @@ jobs:
       - name: Build api-gateway with Maven
         run: mvn -B package --file api-gateway/pom.xml
 
+      - name: Start minikube
+        uses: medyagh/setup-minikube@master
+
+      - name: Try the cluster !
+        run: kubectl get pods -A
+
+      - name: Build image
+        run: |
+          export SHELL=/bin/bash
+          eval $(minikube -p minikube docker-env)
+          docker build -f ./api-gateway/Dockerfile -t api-gateway .
+          echo -n "verifying images:"
+          docker images
+
+      - name: Deploy to minikube
+        run:
+          kubectl apply -f ./api-gateway/.helm/templates/k8s-api-gateway-app.yaml
+
+      - name: Test service URLs
+        run: |
+          minikube service list
+          minikube service api-gateway-service --url
+
   build_openai_service:
     runs-on: ubuntu-latest
     # https://stackoverflow.com/a/70448851
