Adjust workflows to deploy to Minikube

--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -41,8 +41,10 @@ jobs:
 
       - name: Build image
         run: |
+          pwd
+          ls -la
           eval $(minikube -p minikube docker-env)
-          docker build -f api-gateway/Dockerfile -t api-gateway ./
+          docker build -f ./api-gateway/Dockerfile -t api-gateway .
           echo -n "verifying images:"
           docker images
 
