--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -44,13 +44,18 @@ jobs:
           pwd
           ls -la
           eval $(minikube -p minikube docker-env)
-          docker build -f ./api-gateway/Dockerfile -t api-gateway .
+          cd api-gateway/
+          pwd
+          ls -la
+          docker build -t api-gateway .
           echo -n "verifying images:"
           docker images
 
       - name: Deploy to minikube
         run:
-          kubectl apply -f ./api-gateway/.helm/templates/k8s-api-gateway-app.yaml
+          pwd
+          ls -la
+          kubectl apply -f .helm/templates/k8s-api-gateway-app.yaml
 
       - name: Test service URLs
         run: |
