--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -93,6 +93,11 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
