add-spring-cloud-config-server

--- a/swagger-application/src/main/resources/application.yml
+++ b/swagger-application/src/main/resources/application.yml
@@ -65,6 +65,12 @@ spring:
               republishToDlq: true
               dlqDeadLetterExchange:
               dlqTtl: 300000
+    config:
+      uri: http://localhost:8888
+      profile: development
+
+  config:
+    import: "optional:configserver:" # "optional:configserver:http://localhost:8888"
 
 management:
   tracing:
