--- a/openai-service/Dockerfile
+++ b/openai-service/Dockerfile
@@ -12,7 +12,7 @@ COPY . /app/openai-service
 RUN --mount=type=cache,target=/root/.m2 mvn -f /app/openai-service/pom.xml clean package -DskipTests
 
 # Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
+RUN "$JAVA_HOME"/bin/jlink \
          --add-modules jdk.unsupported,java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
          --strip-java-debug-attributes \
          --no-man-pages \
