--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,17 +162,34 @@ services:
       POSTGRES_PASSWORD: ${POSTGRESQL_PASS}
     networks:
       - mb-network
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   keycloak:
     container_name: keycloak
-    image: quay.io/keycloak/keycloak:23.0.4
+    image: quay.io/keycloak/keycloak:26.3.5
+    command: start-dev
     environment:
-      KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
-      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 9090
+      KC_HOSTNAME_STRICT_BACKCHANNEL: false
+      KC_HTTP_ENABLED: true
+      KC_HOSTNAME_STRICT_HTTPS: false
+      KC_HEALTH_ENABLED: true
+      KC_HTTP_PORT: 9090
+      KC_BOOTSTRAP_ADMIN_USERNAME: ${KEYCLOAK_ADMIN}
+      KC_BOOTSTRAP_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres/${POSTGRESQL_DB}
+      KC_DB_USERNAME: ${POSTGRESQL_USER}
+      KC_DB_PASSWORD: ${POSTGRESQL_PASS}
     ports:
-      - "9090:9090"
-    command:
-      - "start-dev"
+      - "127.0.0.1:9090:9090"
+    restart: always
+    depends_on:
+      - postgres
+    profiles:
+      - ${SERVICE_START_PROFILE}
     networks:
       - mb-network
 
@@ -223,6 +240,7 @@ services:
 volumes:
   redis-data:
   redis-insight:
+  postgres_data:
 
 networks:
   mb-network:
